# kscope-kde4

doc/: classKTextEditor_1_1View.html  cscope-HOWTO.txt  dependencies  graphicsview-porting.html  lynx_bookmarks.html  qt4porting.html
kgit/: AUTHORS  Makefile.in  configure  configure.in  configure.in.in
kgit/doc/: Makefile.am  Makefile.in
kgit/doc/en/: Makefile.am  Makefile.in  index.docbook
kgit/po/: Makefile.in
kgit/src/: Makefile.am  Makefile.in  kgit.cpp  kgit.desktop  kgit.h  kgit_client.cpp  kgitiface.h  kgitui.rc  kgitview.cpp  kgitview.h  kgitview_custom.ui  main.cpp  pref.cpp  pref.h
kscope-1.9.4/: Makefile
kscope-1.9.4/app/: Makefile  Makefile.Debug  Makefile.Release
kscope-1.9.4/core/: Makefile  Makefile.Debug  Makefile.Release  libkscope_core.so.1  libkscope_core.so.1.0.0
kscope-1.9.4/cscope/: Makefile  Makefile.Debug  Makefile.Release  libkscope_cscope.so.1.0  libkscope_cscope.so.1.0.0
kscope-1.9.4/editor/: Makefile  Makefile.Debug  Makefile.Release
mvc-sandbox/: CMakeLists.txt  KmvcDlg.cpp  KmvcDlg.h  Makefile  frontend4.cpp  frontend4.h  grepfrontend.cpp  grepfrontend.h  kmvc.cpp  kmvc.h  kmvcwindow.ui  kmvwindow.ui  main.cpp  newprojectdlg4.cpp
src/: .CMakeLists.txt.swp  .kscopeconfig.cpp.swp  CMakeLists.txt  KSGlobalConfig.cpp  KSGlobalConfig.h  KSGlobalConfig.kcfg  KSGlobalConfig.kcfgc  Makefile  README  TODO  application2.h  autocompletionlayout.ui  autocompletionlayout4.h  autocompletionlayout4.ui  buildFrontEnd.cpp  buildFrontEnd.h  calltreedlg4.cpp  calltreedlg4.h  calltreelayout4.h  calltreelayout4.ui  calltreemanager4.cpp  calltreemanager4.h  completed-files.txt  configfrontend4.cpp  configfrontend4.h  cscopefrontend.cpp  cscopefrontend.h  cscopefrontend4.cpp  cscopefrontend4.h  ctagsfrontend.cpp  ctagsfrontend.h  ctagsfrontend4.cpp  ctagsfrontend4.h  ctagslist.cpp  ctagslist.h  diff-kscope.diff  editormanager.cpp  editormanager4.cpp  editormanager4.h  editorpage.cpp  (+152 more)
src-orig/: .main.cpp.swp  Makefile.in  cscopefrontend.cpp  cscopefrontend.h  ctagsfrontend.cpp  ctagsfrontend.h  graphwidget.cpp  historyview.cpp  kscope.cpp  kscope.h  kscopeui.rc  makedlg.cpp  newprojectdlg.cpp  newprojectdlg.h  project.cpp  projectbase.h  projectmanager.h  querypage.h  queryview.cpp  queryview.h  queryviewdlg.cpp  queryviewdlg.h  queryviewdriver.cpp  queryviewdriver.h  querywidget.cpp  querywidget.h  symboldlg.cpp  symboldlg.h  treewidget.cpp
src/old/: ctagsfrontend.cpp-fo  editormanager.h  editorpage.cpp-fo  frontend.cpp-fo  kscope.cpp-orig  kscope.h-orig  main.cpp-kscope
src/ui/: cscopemsglayout.ui  greplayout.ui  newprojectlayout4.ui  querywidgetlayout4.ui  symbollayout.ui  vcsCommitLayout.ui
